--- a/utils/utils/package.json
+++ b/utils/utils/package.json
@@ -10,6 +10,9 @@
     "lib": "lib",
     "test": "__tests__"
   },
+  "bin": {
+    "cli-lib3-utils": "./lib/utils.js"
+  },
   "files": [
     "lib"
   ],
